Assets/styles/home.css
body {
	font-family: Tahoma, sans-serif;
	background-color: var(--palette-background);
	color: var(--palette-textcolor);
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.container {
	width: 90%;
	overflow: scroll;
	scrollbar-width: none;
	padding: 20px;
	margin: 2.5em auto auto;
	background: var(--palette-container-background);
	border-radius: 10px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.main-header {
	text-align: center;
	margin-bottom: 20px;
}

.main-header h1 {
	font-size: 36px;
	color: var(--palette-textcolor);
}

.main-nav {
	display: flex;
	justify-content: center;
	font-weight: bold;
	gap: 15px;
	flex-wrap: wrap;
}

.main-nav a {
	color: var(--palette-button-textcolor);
	background-color: var(--palette-button-tint);
	background-image: var(--palette-button-background-image);
	background-blend-mode: darken;
	padding: 10px 20px;
	border-radius: 5px;
	text-decoration: none;
}

.main-nav a:hover {
	background-color: var(--palette-button-tint-hover);
}

.profile {
	display: inline-block;
	border-radius: 12%;
	padding: 5px 15px;
	margin-bottom: 2vh;
	border-style: groove;
	border-color: var(--spill-color4);
	transition: background-color 0.3s ease, color 0.3s ease;
}

.profile img {
	border-radius: 50%;
	width: 2em;
	transform: translateY(20%);
}

.profile:hover {
	background: var(--palette-background-card);
	border-color: var(--spill-color1);
}

.intro {
	text-align: center;
	margin-bottom: 30px;
}

.intro p {
	font-size: 18px;
	color: var(--palette-textcolor);
}

.featured-projects {
	margin-bottom: 30px;
}

.featured-projects h2 {
	font-size: 24px;
	color: var(--palette-textcolor);
	text-align: center;
	margin-bottom: 20px;
}

.main-footer {
	text-align: center;
	margin-top: 20px;
	padding: 10px 0;
	background-color: var(--palette-background-item);
	color: var(--palette-textcolor);
	border-radius: 0 0 10px 10px;
}

